[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Activator.gd" type="Script" id=1]
[ext_resource path="res://Imports/Laser Base.material" type="Material" id=2]
[ext_resource path="res://Materials/Mirror_001.material" type="Material" id=3]
[ext_resource path="res://Helpers/Close Closest Tile On Ready.tscn" type="PackedScene" id=4]

[sub_resource type="ArrayMesh" id=6]
resource_name = "Cube074"
surfaces/0 = {
"aabb": AABB( -1.5, 0, -0.5, 3, 6.00001, 1 ),
"array_data": PoolByteArray( 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 58, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 191, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 58, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 60, 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 60, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 191, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 56, 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 191, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 58, 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 63, 0, 127, 0, 0, 127, 0, 0, 127, 0, 57, 0, 60, 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 63, 0, 0, 127, 0, 240, 125, 0, 127, 0, 57, 0, 0, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 7, 126, 0, 127, 0, 54, 0, 0, 8, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 63, 0, 0, 127, 0, 0, 126, 0, 127, 52, 54, 10, 38, 8, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 63, 0, 0, 127, 0, 226, 123, 0, 127, 229, 56, 10, 38, 240, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 63, 0, 0, 127, 0, 253, 126, 0, 127, 52, 54, 62, 51, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 1, 126, 0, 127, 0, 54, 0, 52, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 63, 0, 0, 127, 0, 25, 124, 0, 127, 0, 57, 0, 52, 240, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 63, 0, 0, 127, 0, 21, 125, 0, 127, 229, 56, 62, 51, 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 63, 0, 0, 127, 0, 240, 125, 0, 127, 0, 57, 0, 0, 8, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 63, 0, 0, 127, 0, 226, 123, 0, 127, 229, 56, 10, 38, 240, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 63, 0, 0, 127, 0, 21, 125, 0, 127, 229, 56, 62, 51, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 63, 0, 0, 127, 0, 25, 124, 0, 127, 0, 57, 0, 52, 8, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 63, 0, 0, 127, 0, 0, 126, 0, 127, 52, 54, 10, 38, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 7, 126, 0, 127, 0, 54, 0, 0, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 63, 0, 0, 127, 0, 1, 126, 0, 127, 0, 54, 0, 52, 240, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 63, 0, 0, 127, 0, 253, 126, 0, 127, 52, 54, 62, 51, 240, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 63, 0, 127, 0, 0, 130, 0, 253, 127, 52, 54, 62, 51, 242, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 128, 0, 127, 0, 0, 130, 0, 0, 127, 56, 54, 6, 54, 1, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 128, 0, 127, 0, 0, 130, 0, 241, 127, 56, 54, 249, 53, 8, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 63, 0, 127, 0, 0, 131, 0, 238, 127, 52, 54, 10, 38, 8, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 229, 56, 10, 38, 8, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 63, 127, 0, 0, 0, 0, 127, 0, 127, 52, 54, 10, 38, 1, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 56, 54, 249, 53, 1, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 227, 56, 249, 53, 242, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 129, 227, 56, 6, 54, 242, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 129, 56, 54, 6, 54, 240, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 129, 52, 54, 62, 51, 240, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 63, 129, 0, 0, 0, 0, 127, 0, 129, 229, 56, 62, 51, 8, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 63, 0, 129, 0, 0, 126, 0, 6, 127, 229, 56, 10, 38, 1, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 128, 0, 129, 0, 0, 126, 0, 0, 127, 227, 56, 249, 53, 242, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 128, 0, 129, 0, 0, 122, 0, 34, 127, 227, 56, 6, 54, 240, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 63, 0, 129, 0, 0, 120, 0, 40, 127, 229, 56, 62, 51, 242, 255, 127, 63, 0, 0, 176, 64, 0, 0, 0, 128, 0, 0, 129, 0, 127, 0, 0, 127, 0, 0, 0, 60, 242, 255, 127, 63, 0, 0, 96, 64, 0, 0, 0, 128, 0, 0, 129, 0, 127, 0, 0, 127, 0, 0, 0, 60, 1, 0, 128, 191, 0, 0, 96, 64, 0, 0, 0, 128, 0, 0, 129, 0, 127, 0, 0, 127, 0, 0, 0, 60, 1, 0, 128, 191, 0, 0, 176, 64, 0, 0, 0, 128, 0, 0, 129, 0, 127, 0, 0, 127, 0, 0, 0, 60, 0, 0, 192, 63, 0, 0, 192, 64, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 192, 63, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 192, 191, 0, 0, 0, 0, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 58, 0, 0, 192, 191, 0, 0, 192, 64, 0, 0, 0, 191, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 58 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 23, 0, 22, 0, 20, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 84,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 56
}

[sub_resource type="ArrayMesh" id=2]
resource_name = "Cube.075"
surfaces/0 = {
"aabb": AABB( -0.5, -0.75, 0, 2, 2, 0.25001 ),
"array_data": PoolByteArray( 0, 0, 0, 191, 0, 0, 64, 191, 0, 0, 128, 62, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 60, 0, 0, 0, 191, 0, 0, 160, 63, 0, 0, 128, 62, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 60, 0, 0, 0, 191, 0, 0, 160, 63, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 58, 0, 0, 0, 191, 0, 0, 64, 191, 0, 0, 0, 128, 129, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 58, 0, 0, 0, 191, 0, 0, 64, 191, 0, 0, 0, 128, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 58, 0, 0, 0, 191, 0, 0, 160, 63, 0, 0, 0, 128, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 58, 0, 0, 192, 63, 0, 0, 160, 63, 0, 0, 0, 128, 0, 0, 129, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 192, 63, 0, 0, 64, 191, 0, 0, 0, 128, 0, 0, 129, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 192, 63, 0, 0, 64, 191, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 56, 0, 0, 192, 63, 0, 0, 160, 63, 0, 0, 0, 128, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 56, 0, 0, 192, 63, 0, 0, 160, 63, 0, 0, 128, 62, 127, 0, 0, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 192, 63, 0, 0, 64, 191, 0, 0, 128, 62, 127, 0, 0, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 192, 63, 0, 0, 64, 191, 0, 0, 128, 62, 0, 0, 127, 0, 0, 127, 0, 127, 0, 54, 0, 52, 0, 0, 192, 63, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 0, 127, 0, 127, 0, 57, 0, 52, 0, 0, 0, 191, 0, 0, 160, 63, 0, 0, 128, 62, 0, 0, 127, 0, 0, 127, 0, 127, 0, 57, 0, 0, 0, 0, 0, 191, 0, 0, 64, 191, 0, 0, 128, 62, 0, 0, 127, 0, 0, 127, 0, 127, 0, 54, 0, 0, 0, 0, 0, 191, 0, 0, 64, 191, 0, 0, 0, 128, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 56, 0, 0, 192, 63, 0, 0, 64, 191, 0, 0, 0, 128, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 192, 63, 0, 0, 64, 191, 0, 0, 128, 62, 0, 129, 0, 0, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 0, 191, 0, 0, 64, 191, 0, 0, 128, 62, 0, 129, 0, 0, 127, 0, 0, 127, 0, 48, 0, 52, 0, 0, 192, 63, 0, 0, 160, 63, 0, 0, 0, 128, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 56, 0, 0, 0, 191, 0, 0, 160, 63, 0, 0, 0, 128, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 56, 0, 0, 0, 191, 0, 0, 160, 63, 0, 0, 128, 62, 0, 127, 0, 0, 129, 0, 0, 127, 0, 59, 0, 52, 0, 0, 192, 63, 0, 0, 160, 63, 0, 0, 128, 62, 0, 127, 0, 0, 129, 0, 0, 127, 0, 57, 0, 52 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 36,
"material": ExtResource( 3 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -0.5, -0.75, 0.25, -0.5, 1.25, 0, -0.5, 1.25, 0.25, -0.5, -0.75, 0.25, -0.5, -0.75, 0, -0.5, 1.25, 0, -0.5, -0.75, 0, 1.5, 1.25, 0, -0.5, 1.25, 0, -0.5, -0.75, 0, 1.5, -0.75, 0, 1.5, 1.25, 0, 1.5, -0.75, 0, 1.5, 1.25, 0.25, 1.5, 1.25, 0, 1.5, -0.75, 0, 1.5, -0.75, 0.25, 1.5, 1.25, 0.25, 1.5, -0.75, 0.25, -0.5, 1.25, 0.25, 1.5, 1.25, 0.25, 1.5, -0.75, 0.25, -0.5, -0.75, 0.25, -0.5, 1.25, 0.25, -0.5, -0.75, 0, 1.5, -0.75, 0.25, 1.5, -0.75, 0, -0.5, -0.75, 0, -0.5, -0.75, 0.25, 1.5, -0.75, 0.25, 1.5, 1.25, 0, -0.5, 1.25, 0.25, -0.5, 1.25, 0, 1.5, 1.25, 0, 1.5, 1.25, 0.25, -0.5, 1.25, 0.25 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1, 1, 0.03 )

[sub_resource type="ConcavePolygonShape" id=5]
data = PoolVector3Array( -1.5, 0, 0.5, -1.5, 6, -0.5, -1.5, 6, 0.5, -1.5, 0, 0.5, -1.5, 0, -0.5, -1.5, 6, -0.5, -1.5, 0, -0.5, 1.5, 0, 0.5, 1.5, 0, -0.5, -1.5, 0, -0.5, -1.5, 0, 0.5, 1.5, 0, 0.5, 1.5, 0, -0.5, 1.5, 6, 0.5, 1.5, 6, -0.5, 1.5, 0, -0.5, 1.5, 0, 0.5, 1.5, 6, 0.5, 1.5, 6, 0.5, -1.5, 6, -0.5, 1.5, 6, -0.5, 1.5, 6, 0.5, -1.5, 6, 0.5, -1.5, 6, -0.5, -1, 3.5, -0.5, 1.5, 0, -0.5, 1, 3.5, -0.5, -1, 3.5, -0.5, -1.5, 0, -0.5, 1.5, 0, -0.5, 1, 3.5, -0.5, 1.5, 6, -0.5, 1, 5.5, -0.5, 1, 3.5, -0.5, 1.5, 0, -0.5, 1.5, 6, -0.5, -1, 5.5, -0.5, -1.5, 0, -0.5, -1, 3.5, -0.5, -1, 5.5, -0.5, -1.5, 6, -0.5, -1.5, 0, -0.5, 1, 5.5, -0.5, -1.5, 6, -0.5, -1, 5.5, -0.5, 1, 5.5, -0.5, 1.5, 6, -0.5, -1.5, 6, -0.5, -1, 3.5, 0.5, -1.5, 6, 0.5, -1, 5.5, 0.5, -1, 3.5, 0.5, -1.5, 0, 0.5, -1.5, 6, 0.5, 1, 5.5, 0.5, 1.5, 0, 0.5, 1, 3.5, 0.5, 1, 5.5, 0.5, 1.5, 6, 0.5, 1.5, 0, 0.5, -1, 5.5, 0.5, 1.5, 6, 0.5, 1, 5.5, 0.5, -1, 5.5, 0.5, -1.5, 6, 0.5, 1.5, 6, 0.5, 1, 3.5, 0.5, -1.5, 0, 0.5, -1, 3.5, 0.5, 1, 3.5, 0.5, 1.5, 0, 0.5, -1.5, 0, 0.5, 1, 3.5, 0, -1, 3.5, 0.5, -1, 3.5, 0, 1, 3.5, 0, 1, 3.5, 0.5, -1, 3.5, 0.5, -1, 5.5, 0, -1, 3.5, 0.5, -1, 5.5, 0.5, -1, 5.5, 0, -1, 3.5, 0, -1, 3.5, 0.5, 1, 3.5, 0, 1, 5.5, 0.5, 1, 3.5, 0.5, 1, 3.5, 0, 1, 5.5, 0, 1, 5.5, 0.5, -1, 5.5, 0, 1, 5.5, 0.5, 1, 5.5, 0, -1, 5.5, 0, -1, 5.5, 0.5, 1, 5.5, 0.5, -1, 5.5, -0.5, 1, 5.5, 0, 1, 5.5, -0.5, -1, 5.5, -0.5, -1, 5.5, 0, 1, 5.5, 0, 1, 3.5, -0.5, 1, 5.5, 0, 1, 3.5, 0, 1, 3.5, -0.5, 1, 5.5, -0.5, 1, 5.5, 0, -1, 5.5, -0.5, -1, 3.5, 0, -1, 5.5, 0, -1, 5.5, -0.5, -1, 3.5, -0.5, -1, 3.5, 0, 1, 3.5, -0.5, -1, 3.5, 0, -1, 3.5, -0.5, 1, 3.5, -0.5, 1, 3.5, 0, -1, 3.5, 0, 1, 5.5, 0, -1, 3.5, 0, 1, 3.5, 0, 1, 5.5, 0, -1, 5.5, 0, -1, 3.5, 0, 1, 3.5, -0.5, -1, 5.5, -0.5, 1, 5.5, -0.5, 1, 3.5, -0.5, -1, 3.5, -0.5, -1, 5.5, -0.5 )

[node name="AMirror" type="Spatial" groups=[
"Activator",
]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )
coloredObjectPath = NodePath("Cube075/Cube075")

[node name="Close Closest Tile On Ready" parent="." instance=ExtResource( 4 )]

[node name="Cube075" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.244 )
mesh = SubResource( 6 )
material/0 = null

[node name="Cube075" type="MeshInstance" parent="Cube075"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 4.25, -0.000320002 )
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Cube075/Cube075" groups=[
"Reflect",
]]

[node name="CollisionShape" type="CollisionShape" parent="Cube075/Cube075/StaticBody"]
shape = SubResource( 3 )

[node name="Area" type="Area" parent="Cube075/Cube075"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.524416, 0.268116, 0 )
input_ray_pickable = false
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape" type="CollisionShape" parent="Cube075/Cube075/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.282233 )
shape = SubResource( 4 )

[node name="StaticBody" type="StaticBody" parent="Cube075"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.000320002 )

[node name="CollisionShape" type="CollisionShape" parent="Cube075/StaticBody"]
shape = SubResource( 5 )

[connection signal="ready" from="Cube075/Cube075" to="." method="_on_Cube075_ready"]
[connection signal="input_event" from="Cube075/Cube075/StaticBody" to="." method="_on_StaticBody_input_event"]
[connection signal="body_entered" from="Cube075/Cube075/Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Cube075/Cube075/Area" to="." method="_on_Area_body_exited"]
[connection signal="input_event" from="Cube075/StaticBody" to="." method="_on_StaticBody_input_event"]
